--- a/hw2/index.html
+++ b/hw2/index.html
@@ -134,18 +134,18 @@
 				<table style="width: 100%; text-align: center; border-collapse: collapse;">
 					<tr>
 						<td style="text-align: center;">
-							<img src="Task4 unflipped.png" width="400px" />
+							<img src="CS184 HW2 Task4 Unflipped.png" width="400px" />
 							<figcaption>Default unflipped teapot.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="Task4 One Flip.png" width="400px" />
+							<img src="CS184 HW2 Task4 One Flip.png" width="400px" />
 							<figcaption>One diagonal flipped.</figcaption>
 						</td>
 						
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="Task4 Several Flip.png" width="400px" />
+							<img src="CS184 HW2 Task4 Several Flip.png" width="400px" />
 							<figcaption>Several diagnolas flipped.</figcaption>
 						</td>
 						<td style="text-align: center;">
