--- a/hw2/index.html
+++ b/hw2/index.html
@@ -165,18 +165,18 @@
 				<table style="width: 100%; text-align: center; border-collapse: collapse;">
 					<tr>
 						<td style="text-align: center;">
-							<img src="Task5 Unsplit.png" width="400px" />
+							<img src="CS184 HW2 Task5 Unsplit.png" width="400px" />
 							<figcaption>Default unsplit teapot mesh.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="Task5 Vertical Split and Flip.png" width="400px" />
+							<img src="CS184 HW2 Task5 Vertical Split and Flip.png" width="400px" />
 							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
 						</td>
 						
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="Task5 Several Split and Flip.png" width="400px" />
+							<img src="CS184 HW2 Task5 Several Split and Flip.png" width="400px" />
 							<figcaption>Combination of edge flips and splits on the same edges.</figcaption>
 						</td>
 						<td style="text-align: center;">
