--- a/hw2/index.html
+++ b/hw2/index.html
@@ -141,7 +141,7 @@
 							<img src="CS184 HW2 Task4 One Flip.png" width="400px" />
 							<figcaption>One diagonal flipped.</figcaption>
 						</td>
-						
+
 					</tr>
 					<tr>
 						<td style="text-align: center;">
@@ -172,7 +172,7 @@
 							<img src="CS184 HW2 Task5 Vertical Split and Flip.png" width="400px" />
 							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
 						</td>
-						
+
 					</tr>
 					<tr>
 						<td style="text-align: center;">
@@ -189,6 +189,56 @@
 
 			<h3>Part 6: Loop subdivision for mesh upsampling</h3>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+			<div style="display: flex; flex-direction: column; align-items: center;">
+				<table style="width: 100%; text-align: center; border-collapse: collapse;">
+					<tr>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 Left Pre-Split.png" width="400px" />
+							<figcaption>Default unsplit teapot mesh.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 One Upsample.png" width="400px" />
+							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 Two Upsamples.png" width="400px" />
+							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 SphereBasicA.png" width="400px" />
+							<figcaption>Default unsplit teapot mesh.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 SphereCrossA.png" width="400px" />
+							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 SphereCrossEdgesA.png" width="400px" />
+							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 SphereBasicB.png" width="400px" />
+							<figcaption>Default unsplit teapot mesh.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 SphereCrossB.png" width="400px" />
+							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task6 SphereCrossEdgesB.png" width="400px" />
+							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+						</td>
+					</tr>
+				</table>
+			</div>
+
+
+
 
 			<h2>(Optional) Section III: Potential Extra Credit - Art Competition: Model something Creative</h2>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
