--- a/hw2/index.html
+++ b/hw2/index.html
@@ -195,43 +195,43 @@
 					<tr>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 Left Pre-Split.png" width="400px" />
-							<figcaption>Default unsplit teapot mesh.</figcaption>
+							<figcaption>Default Pre-Split.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 One Upsample.png" width="400px" />
-							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+							<figcaption>One Upsample.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 Two Upsamples.png" width="400px" />
-							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+							<figcaption>Two Upsample.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereBasicA.png" width="400px" />
-							<figcaption>Default unsplit teapot mesh.</figcaption>
+							<figcaption>Default Cube with No Splits.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereCrossA.png" width="400px" />
-							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+							<figcaption>Default Cube with 1 Split.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereCrossEdgesA.png" width="400px" />
-							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+							<figcaption>Default Cube with 5 Splits.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereBasicB.png" width="400px" />
-							<figcaption>Default unsplit teapot mesh.</figcaption>
+							<figcaption>No split upsampled 5 times.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereCrossB.png" width="400px" />
-							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+							<figcaption>1 split upsampled 5 times.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereCrossEdgesB.png" width="400px" />
-							<figcaption>Edges flipped along one vertical line, and split on the other side.</figcaption>
+							<figcaption>5 splits upsampled 5 times.</figcaption>
 						</td>
 					</tr>
 				</table>
