--- a/hw2/index.html
+++ b/hw2/index.html
@@ -146,7 +146,7 @@
 					<tr>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task4 Several Flip.png" width="400px" />
-							<figcaption>Several diagnolas flipped.</figcaption>
+							<figcaption>Several diagonals flipped.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="EdgeFlip.jpg" width="400px" />
