--- a/hw2/index.html
+++ b/hw2/index.html
@@ -201,7 +201,7 @@
 					<tr>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 Left Pre-Split.png" width="400px" />
-							<figcaption>Default Pre-Split.</figcaption>
+							<figcaption>Default Pre-Split on left headlight.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 One Upsample.png" width="400px" />
@@ -233,11 +233,11 @@
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereCrossB.png" width="400px" />
-							<figcaption>1 split upsampled 5 times.</figcaption>
+							<figcaption>1 pre-split upsampled 5 times.</figcaption>
 						</td>
 						<td style="text-align: center;">
 							<img src="CS184 HW2 Task6 SphereCrossEdgesB.png" width="400px" />
-							<figcaption>5 splits upsampled 5 times.</figcaption>
+							<figcaption>5 pre-splits upsampled 5 times.</figcaption>
 						</td>
 					</tr>
 				</table>
